# stock-tool

./: .gitignore  CMakeLists.txt  README.md
data/: sample_factor_history.csv
docs/: PRODUCT_THESIS.md
include/App/: MainWindow.ixx
include/Dock/: AnalysisPane.ixx  ChartPane.ixx  SymbolSearchPane.ixx  WatchListPane.ixx
include/Domain/: FactorModel.ixx  MarketData.ixx  PriceCsv.ixx
src/: main.cpp
src/App/: MainWindow.cppm
src/Dock/: AnalysisPane.cppm  ChartPane.cppm  SymbolSearchPane.cppm  WatchListPane.cppm
src/Domain/: FactorModel.cppm  MarketData.cppm  PriceCsv.cppm
